quick fix for the alignment of upvote&downvote

--- a/project/static/styles/course.css
+++ b/project/static/styles/course.css
@@ -53,6 +53,7 @@ td p.message{
 span.like{
     font-size: large;
     font-weight:normal;
+    display: block;
 }
 
 /* i.fa-heart{
